essai vs studio

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/OpenClassrooms-Student-Center/7697016-Front-End.1.git"
+    "url": "https://github.com/Akalabete/javascript_medium.git"
   },
   "author": "OpenClassrooms",
   "license": "ISC",
